# climpy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  class_diagram.md  init.sh  pyproject.toml  scratch.ipynb  test_beijing_flood_events.ipynb  test_peter_floods.ipynb
.github/workflows/: python-app.yml
climpy/hazard/: condition.py  criterion.py  event.py  filter.py  hazard.py  utils.py
climpy/metric/: metric.py
climpy/ml_data/: data.py
climpy/transform/: condition.py  criterion.py  event.py  hazard.py  link.py  select.py  utils.py
climpy/transform/specialized/: flood_criterion.py
src/climpy/metric/: metric.py
src/climpy/ml_data/: data.py
src/climpy/transform/: condition.py  criterion.py  event.py  link.py  select.py
src/climpy/transform/specialized/: flood_criterion.py
tests/: utils.py
tests/transform/: test_condition.py
