[tool.poetry]
name = "climpy"
version = "0.0.0.2"
description = "Tools to analyse climate data for machine learning and event analysis"
authors = ["Mohit Anand <mohit@climai.earth>"]
readme = "README.md"
packages = [{include = "climpy"}]
license = "BSD-3-Clause"
repository = "https://github.com/ClimAI/climpy"
keywords = ["climpy", "deep-learning", "coincidence-analysis"]

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2023.5.0"
geopandas = "^0.13.2"
rioxarray = "^0.14.1"
cartopy = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"