[tool.poetry]
name = "climpy"
version = "0.0.0.4"
description = "Tools to analyse climate data for machine learning and event analysis"
authors = ["Mohit Anand <mohit@climai.earth>"]
readme = "README.md"
packages = [{include = "climpy"}]
license = "BSD-3-Clause"
repository = "https://github.com/ClimAI/climpy"
keywords = ["climpy", "deep-learning", "coincidence-analysis"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
xarray = "^2023.5.0"
geopandas = "^0.13.2"
rioxarray = "^0.14.1"
cartopy = "^0.21.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[tool.black]
line-length=88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''